config_firefox_base: fix toolbar_icons_hover_zoom.css to not be cut off

--- a/features/config_firefox_base/user-config/.mozilla/firefox/fsfw1234.default/chrome/chrome/toolbar_icons_hover_zoom.css
+++ b/features/config_firefox_base/user-config/.mozilla/firefox/fsfw1234.default/chrome/chrome/toolbar_icons_hover_zoom.css
@@ -8,6 +8,7 @@
 #nav-bar .toolbarbutton-1 > * {
         z-index: 4 !important;
         transition: all 0.1s ease !important;
+        position: relative;
 }
 
 /* Make zoomed buttons overflow nicely */
